# rust-tpm2-cli

./: .dockerignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: build.yml  lint.yml  spdx.yml  test.yml
assets/: logo-two-colour.clip
src/: cli.rs  context.rs  error.rs  handle.rs  logger.rs  main.rs  output.rs  parse.rs  pcr.rs  raw_esys.rs  session.rs  tcti.rs
src/cmd/: activatecredential.rs  certify.rs  certifycreation.rs  changeauth.rs  changeeps.rs  changepps.rs  checkquote.rs  clear.rs  clearcontrol.rs  clockrateadjust.rs  commit.rs  contextload.rs  contextsave.rs  create.rs  createak.rs  createek.rs  createpolicy.rs  createprimary.rs  decrypt.rs  dictionarylockout.rs  duplicate.rs  ecdhkeygen.rs  ecdhzgen.rs  ecephemeral.rs  encrypt.rs  encryptdecrypt.rs  eventlog.rs  evictcontrol.rs  flushcontext.rs  getcap.rs  getcommandauditdigest.rs  geteccparameters.rs  getekcertificate.rs  getrandom.rs  getsessionauditdigest.rs  gettestresult.rs  gettime.rs  (+70 more)
tests/: attestation.rs  basic.rs  certify.rs  context.rs  duplicate_import.rs  ecc.rs  ek_ak.rs  encrypt_decrypt.rs  gettime.rs  hash.rs  helpers.sh  hierarchy.rs  hmac.rs  key_lifecycle.rs  nv.rs  parameter_encryption.rs  pcr.rs  policy_workflows.rs  run_all.sh  seal_unseal.rs  sequence.rs  session_policy.rs  sign_verify.rs  tcti.rs  test_attestation.sh  test_basic.sh  test_duplicate_import.sh  test_ecc.sh  test_ek_ak.sh  test_encrypt_decrypt.sh  test_hierarchy.sh  test_key_lifecycle.sh  test_nv.sh  test_pcr.sh  test_session_policy.sh  test_sign_verify.sh
(+2 files in other folders)
