[package]
name = "tpm2-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Rust-based CLI tools for Trusted Platform Module 2.0"
# documentation = ""
readme = "README.md"
# homepage = ""
repository = "https://github.com/hyperfinitism/rust-tpm2-cli"
license = "Apache-2.0"
# keywords = []
# categories = []
include = ["src/**/*", "LICENSE"]

[[bin]]
name = "tpm2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
flexi_logger = "0.31.8"
hex = "0.4.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi", rev = "2c36f103edb30320ec03e5d4b3ebe3eb58a2291f", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
sha2 = "0.10.9"
socket2 = "0.6.3"
